--- a/themes/resto-hugo/layouts/partials/nav.html
+++ b/themes/resto-hugo/layouts/partials/nav.html
@@ -53,6 +53,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ .Site.BaseURL }}#gtco-welcome">About</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/policies.html">Terms and conditions</a>
+                        </li>
                         <!-- <li class="nav-item active">
                             <a class="nav-link" href="{{ .Site.BaseURL }}#gtco-menu">Menu</a>
                         </li> -->
