--- a/themes/resto-hugo/layouts/index.html
+++ b/themes/resto-hugo/layouts/index.html
@@ -6,7 +6,7 @@
             <div class="col-lg-6 hero-left">
                 <h1 class="display-4 mb-5">{{ .Site.Params.heroText | safeHTML }}</h1>
                 <div class="mb-2">
-                    <a class="btn btn-primary btn-shadow btn-lg" href="{{ .Site.BaseURL | absURL }}#gtco-menu" role="button">Download App</a>
+                    <a class="btn btn-primary btn-shadow btn-lg" href="{{ .Site.BaseURL | absURL }}#gtco-menu" role="button">Download App(coming soon)</a>
                     <a class="btn btn-icon btn-lg" href="{{.Site.Params.videoUrl}}" data-featherlight="iframe" data-featherlight-iframe-allowfullscreen="true">
                         <span class="lnr lnr-film-play"></span>
                         Watch how to use
